[tool.poetry]
name = "mrl"
version = "0.1.0"
description = ""
authors = ["Shreyas Prasad <iamshreyasprasad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
faiss-cpu = "^1.8.0"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
